2005-06-01  Nick Clifton  <nickc@redhat.com>

	* config/tc-arm.c (TxCE, TxC3, TxCM, TUE, TUF): Remove redundant
	test for the presence of thumb version of the parsing functions
	since they must always exist and the test generates a compile time
	warning message.

2005-05-31  Richard Henderson  <rth@redhat.com>

	* config/tc-alpha.c (O_lituse_jsrdirect): New.
	(alpha_reloc_op): Add it.
	(debug_exp): Handle it.
	(DUMMY_RELOC_LITUSE_JSRDIRECT): New.
	(emit_insn): Handle it.
	* doc/c-alpha.texi (Alpha-Relocs): Document lituse_jsrdirect.

2005-05-31  Christian Groessler  <chris@groessler.org>

	* write.c (dump_section_relocs): Convert to ISO-C.
	(write_relocs): Avoid signed/unsigned and fprintf argument
	warnings in debug code.

2005-05-26  Zack Weinberg  <zack@codesourcery.com>

	* config/tc-arm.h (TC_FIX_TYPE): Change to int.
	(TC_INIT_FIX_DATA): Initialize to 0, not NULL.
	* config/tc-arm.c (fix_new_arm): Remove now-unnecessary cast.
	(md_apply_fix3): Delete fix_is_thumb variable; refer to
	fixP->tc_fix_data directly in the sole place it was used.
	Explicitly truncate value, *valP, fixP->fx_addnumber, and
	fixP->fx_offset to 32 bits, for consistent behavior between 32-
	and 64-bit hosts.

2005-05-27  Jan Beulich  <jbeulich@novell.com>

	* config/tc-ia64.c (struct proc_pending): New.
	(unwind): Replace proc_start with proc_pending.
	(unwind_diagnostic): Check unwind.proc_pending.sym.
	(dot_proc): Replace unwind.proc_start with unwind.proc_pending.sym.
	Check if previous proc not closed. Record all entry points.
	(dot_endp): Replace unwind.proc_start with unwind.proc_pending.sym.
	Set symbol sizes for entry points recorded in dot_proc. Check
	arguments for consistency with respective .proc's.
	(md_assemble): Replace unwind.proc_start with
	unwind.proc_pending.sym.

2005-05-27  Jan Beulich  <jbeulich@novell.com>

	* config/tc-ia64.c (emit_one_bundle): Restrict scope of ptr, end_ptr,
	and last_ptr. Check all in-use slots for first one with non-NULL